04-Services-Load-Balancing-and-Networking/05-Network-Policies/allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
Metadata:
  name: allow-all
Spec:
  podSelector: {}
  Egress:
  - {}
  policyTypes:
  - Egress
