04-Services-Load-Balancing-and-Networking/05-Network-Policies/allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
Metadata:
  name: allow-all
Spec:
  podSelector: {}
  Ingress:
  - {}
  policyTypes:
  - Ingress
