04-Services-Load-Balancing-and-Networking/05-Network-Policies/deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
Metadata:
  name: default-deny
Spec:
  podSelector: {}
  policyTypes:
  - Egress
